@@ -14,6 +14,7 @@ libged_nil_la_SOURCES = \
 	arot.c \
 	attr.c \
 	autoview.c \
+	bbsize.c \
 	bev.c \
 	bigE.c \
 	blast.c \
