@@ -312,6 +312,7 @@ set auto_index(::Archer::adjustNormals) [list source [file join $dir Archer.tcl]
 set auto_index(::Archer::archerWrapper) [list source [file join $dir Archer.tcl]]
 set auto_index(::Archer::askToSave) [list source [file join $dir Archer.tcl]]
 set auto_index(::Archer::attr) [list source [file join $dir Archer.tcl]]
+set auto_index(::Archer::bbsize) [list source [file join $dir Archer.tcl]]
 set auto_index(::Archer::beginMeasure) [list source [file join $dir Archer.tcl]]
 set auto_index(::Archer::beginObjCenter) [list source [file join $dir Archer.tcl]]
 set auto_index(::Archer::beginObjRotate) [list source [file join $dir Archer.tcl]]
